Some more Angular tests

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -7,4 +7,5 @@
   <p>installed.</p>
   <h3>Enjoy coding! - Yeoman</h3>
   <h4>Super cool!</h4>
+  <p>I'm really digging the automation here!</p>
 </div>
